Pin `tortoise-orm` and `pytest-asyncio` to make tests work

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ description = factory_boy extension with asynchronous ORM support
 long_description = file: README.rst
 author = Kacper Kuźniarski
 url = https://github.com/kuzxnia/async_factory_boy
-keywords = factory_boy, factory, fixtures, async, SQLAlchemy, Tortoise, async_factory_boy 
+keywords = factory_boy, factory, fixtures, async, SQLAlchemy, Tortoise, async_factory_boy
 license = MIT
 classifiers =
     Development Status :: 5 - Production/Stable
@@ -34,10 +34,11 @@ dev =
     flake8
     isort
     SQLAlchemy
-    tortoise-orm >= 0.18.1
+    tortoise-orm == 0.18.1
     wheel>=0.32.0
     tox
     zest.releaser[recommended]
+    pytest-asyncio == 0.21.1
 [bdist_wheel]
 universal = 1
 [zest.releaser]
