--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = 
+envlist =
      py38
      py39
      py310
 
 
 [gh-actions]
-python = 
+python =
      3.8: py38
      3.9: py39
      3.10: py310
@@ -20,8 +20,8 @@ python =
 passenv = PYTHON_VERSION
 deps =
     pytest
-    pytest-asyncio 
-    sqlalchemy 
+    pytest-asyncio==0.21.1
+    sqlalchemy
     tortoise-orm==0.18.1
     greenlet
 commands =
